added scan file window, ipc, some css

--- a/client/mainWindow.html
+++ b/client/mainWindow.html
@@ -2,7 +2,22 @@
 <html lang="en">
 <head>
     <title>EDR Client</title>
+    <link rel="stylesheet" href="mainWindow.css">
 </head>
-<h1>TEST</h1>
-<body></body>
+
+<body>
+    <div class="center_div">
+        <h1>TEST</h1>
+        <div>
+            <button type="button" id="scan_file_button">Scan file</button>
+        </div>
+        <div>
+            <button type="button" id="device_status_button">Device status</button>
+        </div>
+        <div>
+            <h1>DEVICE STATUS HERE</h1>
+        </div>
+    </div>
+    <script src="mainWindow.js"></script>
+</body>
 </html>
