added device info, beautified ui

--- a/client/mainWindow.html
+++ b/client/mainWindow.html
@@ -7,16 +7,34 @@
 
 <body>
     <div class="center_div">
-        <h1>TEST</h1>
-        <div>
-            <button type="button" id="scan_file_button">Scan file</button>
+        <div id="title_div">
+            <h1>EDR</h1>
         </div>
-        <div>
-            <button type="button" id="device_status_button">Device status</button>
+        
+        <div id="wrapper_buttons">
+            <div id="first_button">
+                <button type="button" class="myButton" id="scan_file_button">Scan file</button>
+            </div>
+            <div id="second_button">
+                <button type="button" class="myButton" id="device_status_button">Device status</button>
+            </div>
         </div>
-        <div>
-            <h1>DEVICE STATUS HERE</h1>
+    </div>
+
+    <div class="center_div">
+        <div id="wrapper_info">
+            <div id="device_info">
+                <h1>DEVICE INFO</h1>
+                <h2 id="platform_header">Platform: Loading...</h2>
+                <h2 id="architecture_header">Architecture: Loading...</h2>
+                <h2 id="version_header">Version: Loading...</h2>
+            </div>
+            <div id="device_status">
+                <h1>DEVICE STATUS HERE</h1>
+                <img src="res/infected.jpeg" alt="Clean" width="200" height="150"> 
+            </div>
         </div>
+       
     </div>
     <script src="mainWindow.js"></script>
 </body>
