--- a/client/scanFileWindow.html
+++ b/client/scanFileWindow.html
@@ -13,10 +13,10 @@
                 <input type="file" id="file_input" autofocus>
             </div>
             <div>
-                <button type="submit">Submit</button>
+                <button type="submit" class="myButton">Submit</button>
             </div>
             <div>
-                <button type="button" id="cancel_button">Cancel</button>
+                <button type="button" class="myButton" id="cancel_button">Cancel</button>
             </div>
             
         </form>
