--- a/client/mainWindow.html
+++ b/client/mainWindow.html
@@ -7,10 +7,16 @@
 
 <body>
     <div class="center_div">
-        <div id="title_div">
-            <h1>EDR</h1>
+
+        <div id="wrapper_title">
+            <div id="title_left">
+                <div class="wordart radial"><span class="text">EDR</span></div>        
+            </div>
+            <div id="title_right">
+                <img src="res/shield.png" alt="Logo" width="80" height="80"> 
+            </div>
         </div>
-        
+
         <div id="wrapper_buttons">
             <div id="first_button">
                 <button type="button" class="myButton" id="scan_file_button">Scan file</button>
@@ -31,7 +37,7 @@
             </div>
             <div id="device_status">
                 <h1>DEVICE STATUS HERE</h1>
-                <img src="res/infected.jpeg" alt="Clean" width="200" height="150"> 
+                <img src="res/clean.png" alt="Clean" width="200" height="150"> 
             </div>
         </div>
        
