--- a/client/scanFileWindow.html
+++ b/client/scanFileWindow.html
@@ -7,11 +7,12 @@
 
 <body>
     <div class="center_div">
-        <form action="fileupload" method="post" enctype="multipart/form-data" style="margin: 20px; padding: 20px;">
+        <form action="fileupload" method="post" enctype="multipart/form-data">
             <div id="input_div">
                 <label>Scan file:</label>
                 <input type="file" id="file_input" autofocus>
             </div>
+            <div></div>
             <div id="button_wrapper">
                 <div id="first_button">
                     <button type="submit" class="myButton">Submit</button>
@@ -22,9 +23,16 @@
             </div>
             
         </form>
-        <div>
-            <h1>File status...</h1>
+        <div id="result_wrapper">
+            <div id="result_left">
+                <h2>File status...</h2>
+                <h2 id="result_header">Clean</h2>
+            </div>
+            <div id="result_right">
+                <img src="res/clean.png" alt="Clean" width="200" height="150"> 
+            </div>
         </div>
+       
     </div>
 
     <script src="scanFileWindow.js"></script>
