--- a/client/scanFileWindow.html
+++ b/client/scanFileWindow.html
@@ -12,10 +12,12 @@
                 <label>Scan file:</label>
                 <input type="file" id="file_input" autofocus>
             </div>
-            <div></div>
+            <div id="file_text_div">
+                <h2 id="file_text_header"></h2>
+            </div>
             <div id="button_wrapper">
                 <div id="first_button">
-                    <button type="submit" class="myButton">Submit</button>
+                    <button type="button" class="myButton" id="submit_button"s>Submit</button>
                 </div>
                 <div id="second_button">
                     <button type="button" class="myButton" id="cancel_button">Cancel</button>
