added scan stats page, requests

--- a/frontend/mainWindow.html
+++ b/frontend/mainWindow.html
@@ -24,6 +24,9 @@
             <div id="second_button">
                 <button type="button" class="myButton" id="device_status_button">Device status</button>
             </div>
+            <div id="third_button">
+                <button type="button" class="myButton" id="scan_stats_button">Scan stats</button>
+            </div>
         </div>
     </div>
 
