--- a/frontend/mainWindow.html
+++ b/frontend/mainWindow.html
@@ -39,8 +39,8 @@
                 <h2 id="version_header">Version: Loading...</h2>
             </div>
             <div id="device_status">
-                <h1>DEVICE STATUS HERE</h1>
-                <img src="res/clean.png" alt="Clean" width="200" height="150"> 
+                <h1 id="device_status_header">DEVICE STATUS HERE</h1>
+                <img src="res/clean.png" alt="Clean" width="200" height="150" id="result_img"> 
             </div>
         </div>
        
