Updated readme, added architecture graph

--- a/frontend/mainWindow.html
+++ b/frontend/mainWindow.html
@@ -39,7 +39,7 @@
                 <h2 id="version_header">Version: Loading...</h2>
             </div>
             <div id="device_status">
-                <h1 id="device_status_header">DEVICE STATUS HERE</h1>
+                <h1 id="device_status_header">Status not checked...</h1>
                 <img src="res/clean.png" alt="Clean" width="200" height="150" id="result_img"> 
             </div>
         </div>
